# agentic-system

./: .gitignore  BUILD_ARCHITECT.md  BUILD_PM.md  README.md  agent-config.yaml  demo.py  pyproject.toml
control_plane/: __init__.py  agents.py  agents_architect.py  agents_pm.py  approvals.py  audit.py  cost.py  llm.py  machine.py  orchestrator.py  protocol.py  state.py
control_plane/prompts/: architect.py  pm.py
scripts/: smoke_architect.py  smoke_generalize.py  smoke_pm.py  status.py
smoke_workspaces/architect-smoke/.agent/: approvals.json  cost-ledger.json  state.detail.json  state.header.json
smoke_workspaces/architect-smoke/wiki/projects/architect-smoke/: DESIGN.md  PRD.md  decisions.md
smoke_workspaces/craigslist-repost-smoke/.agent/: approvals.json  cost-ledger.json  state.detail.json  state.header.json
smoke_workspaces/craigslist-repost-smoke/wiki/projects/craigslist-repost-smoke/: PRD.md  decisions.md
tests/: test_architect.py  test_llm.py  test_orchestrator.py  test_pipeline.py  test_pm.py  test_primitives.py
wiki/: DEBT.md  prompt-failures.md
