[project]
name = "agentic-control-plane"
version = "0.1.0"
description = "Deterministic control plane for the personal agentic AI system (state machine, gates, cost governor, audit log)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
